change faq on signin page

--- a/ticketing/templates/signin.html
+++ b/ticketing/templates/signin.html
@@ -31,7 +31,7 @@
 			<br><br><br>
 				<a class="btn btn-default" href="/myrequests">Check Existing Requests</a>
             <br><br><br>
-				<a class="btn btn-default" href="/faq">faq</a>
+				<a class="btn btn-default" href="/faq">Frequently Asked Questions</a>
 		</form>
 	</div>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
