--- a/ticketing/templates/signin.html
+++ b/ticketing/templates/signin.html
@@ -17,7 +17,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			  <ul class="nav navbar-nav navbar-right">
 				<li><a href="/">{{ request.user.username }}</a></li>
-				<li><a href="/accounts/logout">logout</a></li>
+				<li><a href="/accounts/logout">Log Out</a></li>
 			  </ul>
 			</div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
