--- a/ticketing/templates/requests.html
+++ b/ticketing/templates/requests.html
@@ -77,7 +77,7 @@
 					<label>Priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="submit" class="btn btn-default" style="text-align: right;">submit</button>
+				<button type="submit" class="btn btn-default" style="text-align: right;">Submit</button>
 			</fieldset>
 		</form>
 	</div>
