--- a/ticketing/templates/myrequests.html
+++ b/ticketing/templates/myrequests.html
@@ -34,9 +34,9 @@
 		<h1>My Requests</h1>
 		<table width="600" class="table table-bordered table-striped table-hover">
 			<tr>
-				<th>subject</th>
-				<th>descrition</th>
-				<th>priority</th>
+				<th>Subject</th>
+				<th>Description</th>
+				<th>Priority</th>
 			</tr>
             {% for req in all_my_request %}
                 <tr>
