--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@
 
 html{
     font-family: 'Roboto', sans-serif;
-    font-size: 10px;
+    font-size: 12px;
     box-sizing: border-box;
+    
 }
+
+
 
 section{
     width: 100%;
@@ -34,7 +37,7 @@ section{
     border-radius: .4rem;
     margin-bottom: 1rem;
     padding: 1rem;
-    box-shadow: .5rem 2px .5rem rgba(0,0,0,.1);
+    box-shadow: .5rem 2px .5rem rgba(41, 40, 40, 0.1);
 }
 
 .faq-link{
