--- a/ticketing/templates/myrequests.html
+++ b/ticketing/templates/myrequests.html
@@ -43,7 +43,7 @@
                     <td>{{ req.subject }}</td>
                     <td>{{ req.descrition }}</td>
                     <td><button>
-                        <a href="/detail?rid={{ req.id }}">
+                        <a href="/admin_detail?rid={{ req.id }}">
                             {{ req.priority }}>
                         </a>
                         </button>
