--- a/ticketing/templates/admin_detail.html
+++ b/ticketing/templates/admin_detail.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Requests</title>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	<style>
 		label {
 			display: inline-block;
@@ -19,6 +22,24 @@
 
 <body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
+
+		<nav class="navbar navbar-inverse" style="margin-top: 10px;opacity:0.7">
+		  <div class="container-fluid">
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			  <ul class="nav navbar-nav navbar-right">
+				  {% if request.user.is_teacher %}
+				  	<li><a href="/teacher">{{ request.user.username }}</a></li>
+				  {% else %}
+				  	<li><a href="/">{{ request.user.username }}</a></li>
+				  {% endif %}
+
+				<li><a href="/accounts/logout">logout</a></li>
+			  </ul>
+			</div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+
 		<form action="/admin_detail" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
         {% csrf_token %}
 			<fieldset>
@@ -33,26 +54,63 @@
                     <label>{{ mainReq.user.username }} subject!</label></br>
                     <textarea name="studescrition" id="descrition" style="width: 100%;" rows="10" disabled>{{ mainReq.descrition }}</textarea>
                     <label>reply</label></br>
+					{% for comment in mainReq.comments_set.all %}
+						<label>{{ comment.user.username }} -- {{ comment.updated | date }}</label></br>
+						<textarea style="width: 100%;" rows="5" disabled>{{ comment.content }}</textarea>
+					{% endfor %}
+					</br>
+
                     <input type="text" class="form-control" name="" placeholder="to:" value="{{ mainReq.user.username }}"/>
                     <input type="hidden" class="form-control" name="rid" value="{{ mainReq.id }}"/>
-                    <textarea placeholder="input your replay" name="replay" id="descrition" style="width: 100%;" rows="10">{{ mainReq.reply_content }}</textarea>
-					<button class="btn-info btn">share</button>
+                    <textarea placeholder="input your replay" name="replay" id="descrition" style="width: 100%;" rows="10"></textarea>
+<!--					<button class="btn-info btn">share</button>-->
 				</div>
                 <div class="form-group">
 					<hr>
-                    {% if mainReq.reply_content %}
-                        <div style="display: flex;">
-                            <label>{{ mainReq.reply_user.username }}</label>&nbsp;&nbsp;&nbsp;&nbsp;<label>{{ now_date }}</label> &nbsp;&nbsp;&nbsp;&nbsp;<label>have replay</label>
-                        </div>
-                    {% else %}
-                        <div style="display: flex;">
-                            <button type="submit">replay<button>
-                        </div>
-                    {% endif %}
+						{% if mainReq.is_share %}
+							<div style="display: flex;color: red">
+                            	have share,can not replay!
+                        	</div>
+						{% else %}
+							<div>
+                            	<button type="submit" class="btn-info btn">replay</button>
+								{% if mainReq.user.username == user.username %}
+									<button type="button" class="btn-info btn" style="margin-left: 10px" onclick="share('{{ mainReq.id }}')">share</button>
+								{% endif %}
+
+                        	</div>
+						{% endif %}
                 </div>
 			</fieldset>
 		</form>
 	</div>
 </body>
+<script src="/static/js/jquery-1.11.1.min.js"></script>
+<script>
+	function share(wid) {
+            $.ajax({
+                      type: 'POST',
+                      url: '/share',
+                      data: JSON.stringify({"id":wid}),
+                      dataType: "json",
+                      contentType: 'application/json;charset=utf-8',
+                      success: function(data) {
+                        if(data.status == "0"){
+                            alert(data.data)
+							location.reload();
 
+                        }else{
+                            //服务器删除失败，提示错误信息，刷新页面
+                            alert(data.data)
+                        }
+                      },
+                      error: function(xhr) {
+                            //中间发生异常，查看xhr.responseText
+                         alert("失败")
+                      }
+
+                    });
+
+        }
+</script>
 </html>
