--- a/ticketing/templates/requests.html
+++ b/ticketing/templates/requests.html
@@ -66,18 +66,18 @@
             {% csrf_token %}
 			<fieldset>
 				<div class="form-group">
-					<label>subject</label>
+					<label>Subject</label>
 					<input type="text" class="form-control" name="subject" placeholder="" />
 				</div>
 				<div class=" form-group">
-					<label>descrition</label></br>
+					<label>Description</label></br>
 					<textarea name="descrition" id="descrition" style="width: 100%;" rows="10"></textarea>
 				</div>
 				<div class="form-group">
-					<label>priority</label>
+					<label>Priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="submit" class="btn btn-default" style="text-align: right;">submit</button>
+				<button type="submit" class="btn btn-default" style="text-align: right;">Submit</button>
 			</fieldset>
 		</form>
 	</div>
@@ -89,7 +89,7 @@
 				var day = 0,
 					hour = 0,
 					minute = 0,
-					second = 0;	
+					second = 0;
 				if (intDiff > 0) {
 					day = Math.floor(intDiff / (60 * 60 * 24));
 					hour = Math.floor(intDiff / (60 * 60)) - (day * 24);
