--- a/ticketing/templates/faq.html
+++ b/ticketing/templates/faq.html
@@ -5,33 +5,69 @@
         <!--Ion icons-->
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/static/styles.css">
-
     </head>
     <body>
-        <p>Frequently Asked Questions</p>
-        <section>
-            <div class="container">
-                <div class="faq">
-                    {% for req in all_requests %}
-                        <div class="faq-item" id="question1">
-                            <a class="faq-link" href="#question1">
-                                {{ req.subject }} -- {{ req.descrition }}
-                                <i class="icon ion-md-add"></i>
-                                <i class="icon ion-md-remove"></i>
-                            </a>
-                            <div class="answer">
-                                {% for comment in req.comments_set.all %}
-                                     <p>
-                                         {{ comment.content }}
-                                    </p>
-                                {% endfor %}
+      <section>
+  <div class="container">
+      <button onclick="window.history.back()">Back</button>
+      <h1 class ="title">
+          Frequently Asked Questions
+          </h1>
 
-                            </div>
-                        </div>
-                    {% endfor %}
+          <div class="faq-item" id="question1">
+              <a class="faq-link" href="#question1">
+                  Who can see my submitted questions?
+                  <i class="icon ion-md-add"></i>
+                  <i class="icon ion-md-remove"></i>
+              </a>
+              <div class="answer">
+                  <p>
+                      Only administrators can see your submitted questions, other students can not.
+                   </p>
+              </div>
+          </div>
 
-                </div>
-            </div>
-        </section>
-    </body>
+          <div class="faq-item" id="question2">
+              <a class="faq-link" href="#question2">
+                  How long does it usually take to get a reply?
+                  <i class="icon ion-md-add"></i>
+                  <i class="icon ion-md-remove"></i>
+              </a>
+              <div class="answer">
+                  <p>
+                      You can expect a response within 3-5 working days, however depending on the volume of questions, this may be longer or shorter.
+                   </p>
+              </div>
+          </div>
+
+          <div class="faq-item" id="question3">
+              <a class="faq-link" href="#question3">
+                  I forgot my password. How do I recover it?
+                  <i class="icon ion-md-add"></i>
+                  <i class="icon ion-md-remove"></i>
+              </a>
+              <div class="answer">
+                  <p>
+                      Click the forgot password button and follow the link in your email to reset your password
+                   </p>
+              </div>
+          </div>
+
+          <div class="faq-item" id="question4">
+              <a class="faq-link" href="#question4">
+                  How do I report a problem that I found in your application?
+                  <i class="icon ion-md-add"></i>
+                  <i class="icon ion-md-remove"></i>
+              </a>
+              <div class="answer">
+                  <p>
+                      Email an administrator
+                   </p>
+              </div>
+          </div>
+
+      </div>
+  </div>
+</section>
+</body>
 </html>
