add back button

--- a/ticketing/templates/requests.html
+++ b/ticketing/templates/requests.html
@@ -57,6 +57,7 @@
 
 <body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
+		<button onclick="window.history.back()">Back</button>
 		<div class="time-item">
 			<strong id="hour_show"><s id="h"></s>0</strong>
 			<strong id="minute_show"><s></s>01</strong>
