--- a/ticketing/templates/myrequests.html
+++ b/ticketing/templates/myrequests.html
@@ -31,6 +31,7 @@
 
 <body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
+		<button onclick="window.history.back()">Back</button>
 		<h1>My Requests</h1>
 		<table width="600" class="table table-bordered table-striped table-hover">
 			<tr>
