Updated my requests page
-New design
-Back button

--- a/ticketing/templates/myrequests.html
+++ b/ticketing/templates/myrequests.html
@@ -29,10 +29,18 @@
 	</style>
 </head>
 
-<body style="background: url('/static/img/bg2.jpg');">
+<body style="background-image: linear-gradient(rgba(69, 70, 75, 0.7), rgba(69, 70, 75, 0.7)),url('/static/img/myrequestpic.jpg');
+background-size: cover;
+">
+
+<input type="button" value="Back" onclick="history.back()" style="list-style: none; display: inline-block; padding: 8px 12px; position: relative; color:#fff; text-decoration: none; font-size: 14; background: transparent; border:  none; transform: translate(20%, 100%);">
 	<div class="container">
-		<h1>My Requests</h1>
-		<table width="600" class="table table-bordered table-striped table-hover">
+		<h1 style="font-size: 50px; font-family: Verdana, Geneva, Tahoma, sans-serif; color:#fff">My Requests</h1>
+
+		
+		
+		
+		<table width="600" class="table table-bordered table-striped table-hover" style="transform: translate(0%, 30%)">
 			<tr>
 				<th>Subject</th>
 				<th>Description</th>
