--- a/ticketing/templates/active.html
+++ b/ticketing/templates/active.html
@@ -11,10 +11,10 @@
         <section>
             <div class="container">
                 <div class="faq">
-                    
+
                     <div class="faq-item" id="question1">
                         <a class="faq-link" href="#question1">
-                            you not active!,please go to you email:{{ user.email }},click active link
+                            To activate your account please go to your email:{{ user.email }} and click on the activation link
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
