--- a/ticketing/templates/requests.html
+++ b/ticketing/templates/requests.html
@@ -53,16 +53,25 @@
 			color: #fff;
 		}
 	</style>
+
+	<input type="button" value="Back" onclick="history.back()" style="list-style: none; display: inline-block; padding: 8px 12px; position: relative; color:#fff; text-decoration: none; font-size: 14; background: transparent; border:  none; transform: translate(20%, 100%);">
 </head>
 
-<body style="background: url('/static/img/bg2.jpg');">
+	
+
+<body style="background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url('/static/img/requestpic.jpg');
+background-size: cover;
+">
 	<div class="container">
+		
+		<h1 style="font-size: 50px; font-family: Verdana, Geneva, Tahoma, sans-serif; color:#fff">Submit Request</h1>
+		
 		<div class="time-item">
 			<strong id="hour_show"><s id="h"></s>0</strong>
 			<strong id="minute_show"><s></s>01</strong>
 			<strong id="second_show"><s></s>00</strong>
 		</div>
-		<form action="/requests" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+		<form action="/requests" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px; transform: translate(0%, 30%)">
             {% csrf_token %}
 			<fieldset>
 				<div class="form-group">
@@ -77,7 +86,7 @@
 					<label>Priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="submit" class="btn btn-default" style="text-align: right;">submit</button>
+				<button type="submit" class="btn btn-default" style="text-align: right;">Submit</button>
 			</fieldset>
 		</form>
 	</div>
