--- a/ticketing/templates/faq.html
+++ b/ticketing/templates/faq.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Frequently Asked Questions</title>
-        <!--Ion icons-->
-        <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        
-        <section>
-            <div class="container">
-                <h1 class ="title">
-                    Frequently Asked Questions
-                    </h1>
-                    
-                    <div class="faq-item" id="question1">
-                        <a class="faq-link" href="#question1">
-                            Who can see my submitted questions?
-                            <i class="icon ion-md-add"></i>
-                            <i class="icon ion-md-remove"></i>
-                        </a>
-                        <div class="answer">
-                            <p>
-                                Only administrators can see your submitted questions, other students can not.
-                             </p>
-                        </div>
-                    </div>
 
-                    <div class="faq-item" id="question2">
-                        <a class="faq-link" href="#question2">
-                            How long does it usually take to get a reply?
-                            <i class="icon ion-md-add"></i>
-                            <i class="icon ion-md-remove"></i>
-                        </a>
-                        <div class="answer">
-                            <p>
-                                You can expect a response within 3-5 working days, however depending on the volume of questions, this may be longer or shorter.
-                             </p>
-                        </div>
-                    </div>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Requests</title>
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+	<style>
+		label {
+			display: inline-block;
+			max-width: 100%;
+			margin-bottom: 5px;
+			font-weight: 700;
+			color: #fff;
+		}
 
-                    <div class="faq-item" id="question3">
-                        <a class="faq-link" href="#question3">
-                            I forgot my password. How do I recover it?
-                            <i class="icon ion-md-add"></i>
-                            <i class="icon ion-md-remove"></i>
-                        </a>
-                        <div class="answer">
-                            <p>
-                                Click the forgot password button and follow the link in your email to reset your password
-                             </p>
-                        </div>
-                    </div>
+		h1 {
+			color: #000;
+		}
 
-                    <div class="faq-item" id="question4">
-                        <a class="faq-link" href="#question4">
-                            How do I report a problem that I found in your application?
-                            <i class="icon ion-md-add"></i>
-                            <i class="icon ion-md-remove"></i>
-                        </a>
-                        <div class="answer">
-                            <p>
-                                Email an administrator
-                             </p>
-                        </div>
-                    </div>
+		table thead tr th {
+			color: #000;
+		}
 
-                </div>
-            </div>
-        </section>
-    </body>
+		table tbody tr td {
+			color: #000;
+		}
+	</style>
+</head>
+
+<body style="background-image: linear-gradient(rgba(69, 70, 75, 0.7), rgba(69, 70, 75, 0.7)),url('/static/img/myrequestpic.jpg');
+background-size: cover;
+">
+
+<input type="button" value="Back" onclick="history.back()" style="list-style: none; display: inline-block; padding: 8px 12px; position: relative; color:#fff; text-decoration: none; font-size: 14; background: transparent; border:  none; transform: translate(20%, 100%);">
+	<div class="container">
+		<h1 style="font-size: 50px; font-family: Verdana, Geneva, Tahoma, sans-serif; color:#fff">My Requests</h1>
+
+		
+		
+		
+		<table width="600" class="table table-bordered table-striped table-hover" style="transform: translate(0%, 30%)">
+			<tr>
+				<th>Subject</th>
+				<th>Description</th>
+				<th>Priority</th>
+			</tr>
+            {% for req in all_my_request %}
+                <tr>
+                    <td>{{ req.subject }}</td>
+                    <td>{{ req.descrition }}</td>
+                    <td><button>
+                        <a href="/detail?rid={{ req.id }}">
+                            {{ req.priority }}>
+                        </a>
+                        </button>
+                    </td>
+                </tr>
+            {% endfor %}
+		</table>
+	</div>
+	<script>
+		function toSubmit(){
+			var test = window.location.href;
+			window.open(test.replace('myrequests','detail'));
+		}
+	</script>
+</body>
+
 </html>
