--- a/ticketing/templates/adminmyrequests.html
+++ b/ticketing/templates/adminmyrequests.html
@@ -75,9 +75,9 @@
 					<td>{{ req.descrition }}</td>
 					<td>{{ req.priority }}</td>
                     {% if req.reply_content %}
-                        <td>have replay</td>
+                        <td>have replied</td>
                     {% else %}
-                        <td style="color: red">wait replay</td>
+                        <td style="color: red">wait for reply</td>
                     {% endif %}
 
 					<td><button type="submit" class="btn btn-default" style="text-align: right;"><a
