--- a/ticketing/templates/detail.html
+++ b/ticketing/templates/detail.html
@@ -36,7 +36,7 @@
 					    <input type="text" class="form-control" name="" placeholder="to:" value="{{ mainReq.reply_user.username }}"/>
 					    <textarea name="descrition" id="descrition" style="width: 100%;" rows="10">{{ mainReq.reply_content }}</textarea>
                     {% else %}
-                        <label>no replay, please wait !</label></br>
+                        <label>no reply, please wait !</label></br>
 {#                        <textarea name="descrition" id="descrition" style="width: 100%;" rows="10" disabled>{{ mainReq.reply_content }}</textarea>#}
                     {% endif %}
 
